Run missing materials hook when a tool has too few materials
Before we only ran it if there were no materials. But its possible through an upcoming change for a 1 material item to become 2
As part of this change, invalid material IDs are now mapped to unknown instead of removed